Chapter 11 — Listing 11.4: ThenCompose.java Demonstrates: chaining dependent async operations with thenCompose