@@ -1,9 +1,11 @@
-// Java 8+
+// Java 25+
+// Feature shown: thenCompose for dependent async operations, final in Java 8+
 /**
  * Listing 11.4 — ThenCompose.java
- * Demonstrates: Chaining dependent async tasks with thenCompose
+ * Demonstrates: chaining dependent async operations with thenCompose
  * Chapter 11: Declarative and Structured Concurrency
- * Requires: Java 8+
+ * Requires: Java 25+ (compiled with --enable-preview --release 21 for
+ * the void main() instance main method)
  */
 package chapter11;
 
@@ -22,21 +24,19 @@ public class ThenCompose {
     record CustomerProfile(String customerId, String tier) {}
     record PricingDecision(double finalPrice) {}
 
-    // Simulates async fetch of an order by ID
     static CompletableFuture<Order> fetchOrder(
             String orderId, ExecutorService exec) {
         return CompletableFuture.supplyAsync(
                 () -> new Order(orderId, "CUST-42"), exec);
     }
 
-    // Simulates async fetch of a customer profile
     static CompletableFuture<CustomerProfile> fetchProfile(
             String customerId, ExecutorService exec) {
         return CompletableFuture.supplyAsync(
                 () -> new CustomerProfile(customerId, "GOLD"), exec);
     }
 
-    public static void main(String[] args) throws Exception {
+    void main() throws Exception {
 
         ExecutorService executor = Executors.newFixedThreadPool(4);
 
@@ -45,23 +45,20 @@ public class ThenCompose {
 
             // thenCompose — second async op depends on result of first.
             // Returns the inner CompletableFuture, not a nested one.
-            // Using thenApply here would yield CompletableFuture<CompletableFuture<...>>
+            // thenApply here would yield CompletableFuture<CompletableFuture<...>>
             .thenCompose(order ->
-                    fetchProfile(order.customerId(), executor)
+                fetchProfile(order.customerId(), executor)
                     .thenApply(profile -> {
-                        // Apply 10% discount for GOLD tier customers
                         double discount =
                             profile.tier().equals("GOLD") ? 0.1 : 0.0;
                         return new PricingDecision(299.99 * (1 - discount));
                     }));
 
-        // Block only at the terminal result
         PricingDecision decision = pipeline.get();
         log.info("Final price: " + decision.finalPrice());
 
         executor.shutdown();
         executor.awaitTermination(10, TimeUnit.SECONDS);
-
         // Output: INFO: Final price: 269.991
     }
 }
